Final version with a product table instead of powerpoint for Automotive Industry

--- a/allProducts.html
+++ b/allProducts.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="lcd module, lcd module display, touch screen lcd display module, lcd display module, lcd module manufacturer, lcd module manufacturers, lcd manufacturer, tft lcd display">
+  <meta name="description" content="Microtips Technology is a leading manufacturer of LCD display module products. We are your one-stop shop for the highest quality touch screen displays.">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -82,11 +84,11 @@
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
-            <a href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
-            <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
-            <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
-            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
+            <a target="_blank" href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
+            <a target="_blank" href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a target="_blank" href="blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -1440,7 +1442,7 @@
         <p>E-mail: 
           <a href="mailto:mtusainfo@microtipsusa.com">mtusainfo@microtipsusa.com</a>
         </p>
-        <p>Address: 3504 Lake Lynda Drive, Orlando, FL, 32817</p>
+        <p>Address: 3504 Lake Lynda Drive Ste 110, Orlando, FL, 32817</p>
         <p>Phone: (888) 499-8477</p> 
       </div>
     </div>
@@ -1516,6 +1518,11 @@
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
+
+<script type="text/javascript">
+var DID=254248;
+</script>
+<script async src="//stats.sa-as.com/live.js"></script>
 
 </body>
 </html>
