--- a/comingSoon.html
+++ b/comingSoon.html
@@ -178,5 +178,10 @@
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
 
+<script type="text/javascript">
+var DID=254248;
+</script>
+<script async src="//stats.sa-as.com/live.js"></script>
+
 </body>
 </html>
