--- a/industries.html
+++ b/industries.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="lcd module, lcd module display, touch screen lcd display module, lcd display module, lcd module manufacturer, lcd module manufacturers, lcd manufacturer, tft lcd display">
+  <meta name="description" content="Microtips Technology is a leading manufacturer of LCD display module products. We are your one-stop shop for the highest quality touch screen displays.">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -76,11 +78,11 @@
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
-            <a href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
-            <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
-            <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
-            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
+            <a target="_blank" href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
+            <a target="_blank" href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a target="_blank" href="blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -124,7 +126,7 @@
             <h1 style="font-size: 100px; padding: 75px 0px;">Automotive</h1>
           </div>
           <div style="text-align: center;" id="content-mobile">
-            <h1 style="font-size: 75px; padding: 50px 0px;">Automotive</h1>
+            <h1 style="font-size: 50px; padding: 50px 0px;">Automotive</h1>
           </div>
         </div>
       </div>
@@ -156,8 +158,111 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Automotive Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <!-- <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213456&authkey=AHBotPDAe9nEawQ&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213456&authkey=AHBotPDAe9nEawQ&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe> -->
+        <div style="overflow-x:auto;">
+          <table id="featuredProductsTable">
+            <tr class="featuredProductsTableHeader">
+              <th>Part Number</th>
+              <th>Description</th>
+              <th>Screen Size</th>
+              <th>Brightness</th>
+              <th>Resolution</th>
+              <th>Touch Panel</th>
+              <th>Interface</th>
+            </tr>
+            <tr class="featuredProductsTableOdd">
+              <td>MTA-0550C10801920MI-350</td>
+              <td>5.5" 1080x1920 AMOLED Display w/ Capacitive Touch Panel</td>
+              <td>5.5"</td>
+              <td>350</td>
+              <td>1080 x 1920</td>
+              <td>CTP</td>
+              <td>MIPI</td>
+            </tr>
+            <tr class="featuredProductsTableEven">
+              <td>MTT-0154N240240SP-500</td>
+              <td>1.54" 240x240 TFT Display</td>
+              <td>1.54"</td>
+              <td>500</td>
+              <td>240 x 240</td>
+              <td>N/A</td>
+              <td>SPI</td>
+            </tr>
+            <tr class="featuredProductsTableOdd">
+              <td>MTT-0240N240320CP-1000</td>
+              <td>2.4" 240x320 TFT Display</td>
+              <td>2.4"</td>
+              <td>1000</td>
+              <td>240 x 320</td>
+              <td>N/A</td>
+              <td>CPU</td>
+            </tr>
+            <tr class="featuredProductsTableEven">
+              <td>MTT-0350C320240MP-800</td>
+              <td>3.5" 320x240 TFT Display w/ Capacitive Touch Panel</td>
+              <td>3.5"</td>
+              <td>800</td>
+              <td>320 x 240</td>
+              <td>CTP</td>
+              <td>MPU, SPI, Sync/DE</td>
+            </tr>
+            <tr class="featuredProductsTableOdd">
+              <td>MTT-0430C480272RG-1200</td>
+              <td>4.3" 480x272 TFT Display w/ Capacitive Touch Panel</td>
+              <td>4.3"</td>
+              <td>1200</td>
+              <td>480 x 272</td>
+              <td>CTP</td>
+              <td>RGB</td>
+            </tr>
+            <tr class="featuredProductsTableEven">
+              <td>MTT-0500C7201280MI-850</td>
+              <td>5.0" 720x1280 TFT Display w/ Capacitive Touch Panel</td>
+              <td>5.0"</td>
+              <td>850</td>
+              <td>720 x 1280</td>
+              <td>CTP</td>
+              <td>MIPI, I2C</td>
+            </tr>
+            <tr class="featuredProductsTableOdd">
+              <td>MTT-0570N640480RG-900</td>
+              <td>5.7" 640x480 TFT Display</td>
+              <td>5.7"</td>
+              <td>900</td>
+              <td>640 x 480</td>
+              <td>N/A</td>
+              <td>RGB</td>
+            </tr>
+            <tr class="featuredProductsTableEven">
+              <td>MTT-0700N1024600LV-1500</td>
+              <td>7.0" 1024x600 TFT Display</td>
+              <td>7.0"</td>
+              <td>1500</td>
+              <td>1024 x 600</td>
+              <td>N/A</td>
+              <td>LVDS</td>
+            </tr>
+            <tr class="featuredProductsTableOdd">
+              <td>MTT-0800C800480LV-800</td>
+              <td>8.0" 800x480 TFT Display w/ Capacitive Touch Panel</td>
+              <td>8.0"</td>
+              <td>800</td>
+              <td>800 x 480</td>
+              <td>CTP</td>
+              <td>LVDS</td>
+            </tr>
+            <tr class="featuredProductsTableEven">
+              <td>MTT-1010C1280800LV-1000</td>
+              <td>10.1" 1280x800 TFT Display w/ Capacitive Touch Panel</td>
+              <td>10.1"</td>
+              <td>1000</td>
+              <td>1280 x 800</td>
+              <td>CTP</td>
+              <td>LVDS, I2C</td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
 
@@ -200,8 +305,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Industrial Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213454&authkey=AHCmIQIgVXdqs4Q&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213454&authkey=AHCmIQIgVXdqs4Q&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -245,8 +350,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Medical Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213452&authkey=AJVAbVboNvmhcUI&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213452&authkey=AJVAbVboNvmhcUI&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -290,8 +395,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Consumer Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213457&authkey=ABXmOrZu7zepn6g&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213457&authkey=ABXmOrZu7zepn6g&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -334,8 +439,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured HVAC Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213453&authkey=AIHzMElgWpxZzIo&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213453&authkey=AIHzMElgWpxZzIo&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -377,8 +482,8 @@
         <div>
           <h2 style="margin-top: 10px;">Featured Telecom Products</h2>
         </div>
-        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
-        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%212495&authkey=AANR1S5hzZ6dlyI&em=2&wdAr=1.7777777777777777' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-desktop" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213455&authkey=AN0Hyz1ZN5sI2k8&em=2&wdAr=1.3333333333333333' width='100%' height='700px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
+        <iframe id="content-mobile" src='https://onedrive.live.com/embed?cid=032B8AADB2009838&resid=32B8AADB2009838%213455&authkey=AN0Hyz1ZN5sI2k8&em=2&wdAr=1.3333333333333333' width='100%' height='300px' frameborder='0'>This is an embedded <a target='_blank' href='https://office.com'>Microsoft Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office Online</a>.</iframe>
       </div>
     </div>
 
@@ -411,7 +516,7 @@
         <p>E-mail: 
           <a href="mailto:mtusainfo@microtipsusa.com">mtusainfo@microtipsusa.com</a>
         </p>
-        <p>Address: 3504 Lake Lynda Drive, Orlando, FL, 32817</p>
+        <p>Address: 3504 Lake Lynda Drive Ste 110, Orlando, FL, 32817</p>
         <p>Phone: (888) 499-8477</p> 
       </div>
     </div>
@@ -487,6 +592,11 @@
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
+
+<script type="text/javascript">
+var DID=254248;
+</script>
+<script async src="//stats.sa-as.com/live.js"></script>
 
 </body>
 </html>
