--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="images\logo_only.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="lcd module, lcd module display, touch screen lcd display module, lcd display module, lcd module manufacturer, lcd module manufacturers, lcd manufacturer, tft lcd display">
+  <meta name="description" content="Microtips Technology is a leading manufacturer of LCD display module products. We are your one-stop shop for the highest quality touch screen displays.">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -42,11 +44,11 @@
             <li><a href="distreps.html">Distributors & Reps</a></li>
           </ul>
           <div class="nav navbar-nav navbar-right">
-            <a href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
-            <a href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
-            <a href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
-            <a href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
-            <a href="http://www.microtipsusa.com/blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
+            <a target="_blank" href="https://www.facebook.com/MicrotipsTechnology"><i class="navbarIcons fa fa-facebook-square"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/company/microtips-technology-usa"><i class="navbarIcons fa fa-linkedin-square"></i></a>
+            <a target="_blank" href="https://twitter.com/MicroTipsUSA"><i class="navbarIcons fa fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/channel/UCUW7bcaTxuToVjchC2AKgAw"><i class="navbarIcons fa fa-youtube-square"></i></a>
+            <a target="_blank" href="blog/"><i class="navbarIcons fa fa-wordpress"></i></a>
             <button class="btn btn-info navbar-btn" id="contactBtn" style="margin-left: 0px; margin-top: -6px;">Contact Us!</button>
           </div>
         </div>
@@ -104,8 +106,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\RA.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:arif@microtipsusa.com">arif@microtipsusa.com</a></p>
-            <p>Phone: (407) 273-0204 x101</p>
+            <p>E-mail: <a href="mailto:arif@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">arif@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            <p>Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x101</p>
             Cell: &#40;&#52;&#48;&#55;&#41;&#32;&#55;&#53;&#56;&#45;&#49;&#48;&#57;&#53;
           </div>
         </div>
@@ -116,9 +118,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\NR.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:nadim@microtipsusa.com">nadim@microtipsusa.com</a></p>
-            <p>Phone: (407) 273-0204 x103</p>
-            Direct: (866) 239-3171
+            <p>E-mail: <a href="mailto:nadim@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">nadim@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            <p>Phone: (866) 239-3171</p>
           </div>
         </div>
         <h3>Nadim Rahman</h3>
@@ -128,9 +129,9 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GV.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:george@microtipsusa.com">george@microtipsusa.com</a></p>
-            <p>Phone: (407) 273-0204 x102</p>
-            Cell: (407) 325-5096
+            <p>E-mail: <a href="mailto:george@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">george@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            <p>Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x102</p>
+            Cell: &#x28;&#x34;&#x30;&#x37;&#x29; 325-5096
           </div>
         </div>
         <h3>George Van Driessche</h3>
@@ -142,9 +143,9 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JB.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:jordan@microtipsusa.com">jordan@microtipsusa.com</a></p>
-            <p>Phone: (407) 273-0204 x105</p>
-            Cell: (937) 654-0576
+            <p>E-mail: <a href="mailto:jordan@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">jordan@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            <p>Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x105</p>
+            Cell: &#x28;&#x39;&#x33;&#x37;&#x29;&#x20;&#x36;&#x35;&#x34;&#x2d;&#x30;&#x35;&#x37;&#x36;
           </div>
         </div>
         <h3>Jordan Baker</h3>
@@ -154,8 +155,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\GM.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:grace-ann@microtipsusa.com">grace-ann@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x108
+            <p>E-mail: <a href="mailto:grace-ann@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">grace-ann@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x108
           </div>
         </div>
         <h3>Grace-Ann Munroe</h3>
@@ -165,8 +166,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\JR.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:jruhl@microtipsusa.com">jruhl@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x104
+            <p>E-mail: <a href="mailto:jruhl@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">jruhl@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x104
           </div>
         </div>
         <h3>Jordan Ruhl</h3>
@@ -176,8 +177,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SH.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:susan@microtipsusa.com">susan<br>@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x100
+            <p>E-mail: <a href="mailto:susan@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">susan<br>@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x100
           </div>
         </div>
         <h3>Susan Hitchcock</h3>
@@ -189,8 +190,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\MR.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:marzana@microtipsusa.com">marzana<br>@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x109
+            <p>E-mail: <a href="mailto:marzana@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">marzana<br>@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x109
           </div>
         </div>
         <h3>Marzana Rashid</h3>
@@ -200,8 +201,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DC.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:danny@microtipsusa.com">danny<br>@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x107
+            <p>E-mail: <a href="mailto:danny@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">danny<br>@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x107
           </div>
         </div>
         <h3>Danny Clark</h3>
@@ -211,9 +212,9 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\SB.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:sultan@microtipsusa.com">sultan<br>@microtipsusa.com</a></p>
-            <p>Phone: (407) 273-0204 x103</p>
-            Cell: (919) 412-0982
+            <p>E-mail: <a href="mailto:sultan@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">sultan<br>@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            <p>Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x103</p>
+            Cell: &#x28;&#x39;&#x31;&#x39;&#x29;&#x20;&#x34;&#x31;&#x32;&#x2d;&#x30;&#x39;&#x38;&#x32;
           </div>
         </div>
         <h3>Sultan Bashar</h3>
@@ -223,8 +224,8 @@
         <img class="img-responsive teamImage" style="padding-top: 15px;" src="images\about\team\DK.png">
         <div class="middle">
           <div class="aboutFloatingText">
-            <p>E-mail: <a href="mailto:david@microtipsusa.com">david<br>@microtipsusa.com</a></p>
-            Phone: (407) 273-0204 x110
+            <p>E-mail: <a href="mailto:david@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;">david<br>@&#x6d;&#x69;&#x63;&#x72;&#x6f;&#x74;&#x69;&#x70;&#x73;&#x75;&#x73;&#x61;&#x2e;&#x63;&#x6f;&#x6d;</a></p>
+            Phone: &#x28;&#x34;&#x30;&#x37;&#x29; 273-0204 x110
           </div>
         </div>
         <h3>David Khonsary</h3>
@@ -245,7 +246,7 @@
       <div class="col-xs-12 col-sm-4">
         <img class="img-responsive" src="images\about\locations\MTUshort.jpg">
         <h3>USA</h3>
-        <p>3504 Lake Lynda Drive, Orlando, FL, 32817</p>
+        <p>3504 Lake Lynda Drive Ste 110, Orlando, FL, 32817</p>
       </div>
       <div class="col-xs-12 col-sm-4">
         <img class="img-responsive" src="images\about\locations\MTTW.jpg">
@@ -258,12 +259,8 @@
         <p>Dong-Shen Road, Si-Ma Village, Chang-Ping Town, Dong-Guang City, Guang-Dong Province, China 523570</p>
       </div>
     </div>
-    <br>
+    <div class="blueSplitter"></div>
   </div>
-</div>
-
-<div class="container">
-  <div class="blueSplitter"></div>
 </div>
 
 <div class="subsection">
@@ -287,7 +284,7 @@
         <p>E-mail: 
           <a href="mailto:mtusainfo@microtipsusa.com">mtusainfo@microtipsusa.com</a>
         </p>
-        <p>Address: 3504 Lake Lynda Drive, Orlando, FL, 32817</p>
+        <p>Address: 3504 Lake Lynda Drive Ste 110, Orlando, FL, 32817</p>
         <p>Phone: (888) 499-8477</p> 
       </div>
     </div>
@@ -354,6 +351,11 @@
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDo7ru1y7ntwm1nlOAogse-gWPyCC3hYXY&callback=initMap"></script>
+
+<script type="text/javascript">
+var DID=254248;
+</script>
+<script async src="//stats.sa-as.com/live.js"></script>
 
 </body>
 </html>
