Fixed issue with product page and replaced ppt with product grid for all industries.

--- a/allProducts.html
+++ b/allProducts.html
@@ -1421,6 +1421,8 @@
   </div>
 </div>
 
+<div class="subsection" style="height: 80px;"></div>
+
 <div class="subsection">
   <div class="container">
     <div class="row">
